# ontio-wasmjit

./: .gitmodules  .travis.build.sh  .travis.yml  Cargo.toml  README.md
src/: chain_api.rs  disassm.rs  error.rs  executor.rs  lib.rs  linker.rs  main.rs  resolver.rs  trampoline.rs  utils.rs
tests/: add.wast  add_one.wast  br_table.wast  chain-api.wast  chain-api2.wast  div.wast  divtrap.wast  dump.sh  dumpir.sh  dumpnative.sh  fibonacci.wast  gas_test.wasm  gas_test.wast  global.wast  load_mul.wast  load_sub.wast  memory-load.wast  multiply.wast  panic.wast  recursion.wast  runtime_test.wast  subtract.wast  sum.wast  vmctx.wast
wasmjit-capi/: Cargo.toml
wasmjit-capi/example/: compile.sh  helloworld.c  wasmjit.h
wasmjit-capi/example/wast/: helloworld.wast
wasmjit-capi/src/: lib.rs
wasmjit-environ/: Cargo.toml  README.md  build.rs
wasmjit-environ/src/: compilation.rs  cranelift.rs  func_environ.rs  lib.rs  module.rs  module_environ.rs  vmoffsets.rs
wasmjit-go-test/: Cargo.toml
wasmjit-go-test/gotest/: example_sample_test.go  import.go  wasmjit_runtime.h
wasmjit-go-test/gotest/test/: test.wat  test0.wat  test1.wat
wasmjit-go-test/src/: lib.rs
wasmjit-harness/: Cargo.toml
wasmjit-harness/src/: main.rs  recursive_invoke.rs
wasmjit-harness/tests/: depth_check.wast  gas_test.wast  test.wast
wasmjit-onto-interface/: Cargo.toml
wasmjit-onto-interface/src/: lib.rs
wasmjit-runtime/: Cargo.toml  README.md
wasmjit-runtime/src/: builtins.rs  export.rs  instance.rs  lib.rs  memory.rs  mmap.rs  runtime_config.rs  signalhandlers.rs  table.rs  trap_registry.rs  traphandlers.rs  vmcontext.rs
