[package]
name = "ontio-wasmjit"
version = "0.1.0"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "wasmjit"
path = "src/main.rs"

[dependencies]
cranelift-codegen = "0.44.0"
target-lexicon = "0.8.1"
wast = "1.0.0"
ontio-wasmjit-environ = {path="./wasmjit-environ"}
capstone = "0.6.0"
dynasmrt = "0.5.1"
rand = "*"

[dev-dependencies]

[workspace]
members = [ "wasmjit-environ"]

