[package]
name = "ontio-wasmjit"
version = "0.1.0"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "wasmjit"
path = "src/main.rs"

[dependencies]
cranelift-codegen = "0.44.0"
cranelift-wasm = "0.44.0"
target-lexicon = "0.8.1"
wast = "1.0.0"
ontio-wasmjit-environ = {path="./wasmjit-environ"}
ontio-wasmjit-runtime = {path="./wasmjit-runtime"}
capstone = "0.6.0"
dynasmrt = "0.5.1"
rand = "*"
cranelift-entity = "0.44.0"
env_logger = "0.7.1"
log = "0.4.8"

[dev-dependencies]

[workspace]
members = [ "wasmjit-environ", "wasmjit-runtime"]

