[package]
name = "ontio-wasmjit"
version = "0.1.0"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "wasmjit"
path = "src/main.rs"

[dependencies]
cranelift-codegen = "0.49.0"
cranelift-wasm = "0.49.0"
cranelift-frontend = "0.49.0"
target-lexicon = "0.9"
wast = "1.0.0"
ontio-wasmjit-environ = {path="./wasmjit-environ"}
ontio-wasmjit-runtime = {path="./wasmjit-runtime"}
capstone = "0.6.0"
dynasmrt = "0.5.1"
rand = "*"
cranelift-entity = "0.49.0"
env_logger = "0.7.1"
hmac-sha256 = "0.1.2"
lru = "0.4.0"
once_cell = "1.2.0"
ripemd160 = "0.8.0"
parking_lot = "0.9.0"
failure = "0.1.6"

[dev-dependencies]

[workspace]
members = [ "wasmjit-environ", "wasmjit-runtime", "wasmjit-harness", "wasmjit-capi"]

