[package]
name = "wasmjit-capi"
version = "0.1.0"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
ontio-wasmjit = {path=".."}
ontio-wasmjit-runtime = {path="../wasmjit-runtime"}
cranelift-wasm = "0.49.0"
ontio-wasm-build = {git ="https://github.com/ontio/ontio-wasm-build"}
