[package]
name = "ontio-wasmjit-environ"
version = "0.1.0"
authors = ["laizy <aochyi@126.com>", "The Wasmtime Project Developers"]
description = "Standalone environment support for WebAsssembly code in Cranelift"
repository = "https://github.com/laizy/ontio-wasmjit"
documentation = "https://docs.rs/ontio-wasmjit-environ/"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = { version = "0.49.0", features = ["enable-serde"] }
cranelift-entity = { version = "0.49.0", features = ["enable-serde"] }
cranelift-wasm = { version = "0.49.0", features = ["enable-serde"] }
cranelift-frontend = "0.49.0"
failure = { version = "0.1.3", default-features = false }
failure_derive = { version = "0.1.3", default-features = false }
serde = { version = "1.0.94", features = ["derive"] }
indexmap = "1.2.0"
log = "0.4.8"
wasmparser = "0.39.2"

[dev-dependencies]
target-lexicon = { version = "0.8.1", default-features = false }
rand = { version = "0.7.0", features = ["small_rng"] }

[features]
default = ["std"]
std = ["cranelift-codegen/std", "cranelift-wasm/std"]
core = ["cranelift-codegen/core", "cranelift-wasm/core"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "laizy/ontio-wasmjit" }
