[package]
name = "wasmjit-harness"
version = "0.1.0"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wast = "3.0.4"
anyhow = "1.0.22"
matches = "0.1.8"
ontio-wasmjit = {path="../"}
glob = "0.3.0"
