[package]
name = "ontio-wasmjit-runtime"
version = "0.1.0"
authors = ["laizy aochyi@126.com", "The Wasmtime Project Developers"]
description = "Runtime library support for ontio-wasmjit"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/laizy/ontio-wasmjit"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = { version = "0.49.0", features = ["enable-serde"] }
cranelift-entity = { version = "0.49.0", features = ["enable-serde"] }
cranelift-wasm = { version = "0.49.0", features = ["enable-serde"] }
ontio-wasmjit-environ = { path = "../wasmjit-environ", default-features = false }
region = "2.0.0"
libc = { version = "0.2.60", default-features = false }
errno = "0.2.4"
memoffset = "0.5.1"
failure = { version = "0.1.3", default-features = false }
failure_derive = { version = "0.1.3", default-features = false }
indexmap = "1.0.2"
static_assertions = "1.0.0"
once_cell = "1.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.7", features = ["winbase", "memoryapi"] }

[build-dependencies]
cc = "1.0"

[features]
default = ["std"]
std = ["cranelift-codegen/std", "cranelift-wasm/std", "ontio-wasmjit-environ/std"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "laizy/ontio-wasmjit" }
